Add comprehensive guides for CCS setup and FreeRTOS integration
- Created `external_libraries.mdx` to document importing and using external libraries in Code Composer Studio (CCS).
- Developed `installccs.mdx` for detailed installation instructions of CCS and TivaWare across Windows, macOS, and Linux.
- Added `openworkspace.mdx` to guide users in setting up their CCS workspace for lab development.
- Introduced `setupGuide.mdx` as a quick start guide linking all essential setup steps for the lab environment.
- Established `freertos.mdx` to explain FreeRTOS fundamentals and its advantages for real-time embedded systems.
- Created `freertosproyects.mdx` to provide a checklist for setting up a CCS project with FreeRTOS on EK-TM4C1294XL.

--- a/src/content/docs/guides/FreeRTOS/freertosproyects.mdx
+++ b/src/content/docs/guides/FreeRTOS/freertosproyects.mdx
@@ -208,5 +208,8 @@ void vApplicationStackOverflowHook(TaskHandle_t xTask, char *pcTaskName) {
 
 ```
 
+Compile and flash the project to your EK-TM4C1294XL board. You should see the green LED (D1) blinking every 2 seconds and the blue LED (D2) blinking rapidly every 200 milliseconds, demonstrating that FreeRTOS is running multiple tasks concurrently.
 
-When you’re ready, expand this skeleton with your exact paths, clock configuration code, and the tasks you need for your lab.
+<Aside type="note">
+  Make sure you have installed the latest version of Code Composer Studio before starting.
+</Aside>
