--- a/src/content/docs/guides/ccs/setupguide.mdx
+++ b/src/content/docs/guides/ccs/setupguide.mdx
@@ -2,11 +2,11 @@
 title: "Lab Setup Quick Start Guide"
 description: "Start here! Links to all setup steps and guides for your lab environment."
 links:
-- /guides/installccs/
-- /guides/enviromentsetup/
-- /guides/openworkspace/
+- /guides/ccs/installccs/
+- /guides/ccs/enviromentsetup/
+- /guides/ccs/openworkspace/
 - /guides/labkit/
-- /guides/external_libraries/
+- /guides/ccs/external_libraries/
 - /guides/programmingstyle/
 ---
 
@@ -26,32 +26,32 @@ import {
 </Aside>
 
 <CardGrid>
-  <LinkCard href="/guides/installccs" title="Install CCS & TivaWare" icon="download">
+  <LinkCard href="/guides/ccs/installccs/" title="Install CCS & TivaWare" icon="download">
     Step-by-step instructions for installing Code Composer Studio and TivaWare on Windows, macOS, and Linux.  
     <Badge text="Required" variant="success" />
   </LinkCard>
 
-  <LinkCard href="/guides/enviromentsetup" title="Configure CCS Environment" icon="settings">
+  <LinkCard href="/guides/ccs/enviromentsetup/" title="Configure CCS Environment" icon="settings">
     How to set up compiler paths and environment variables in CCS.  
     <Badge text="Lab Computers" variant="tip" />
   </LinkCard>
 
-  <LinkCard href="/guides/openworkspace" title="Workspace Setup" icon="folder">
+  <LinkCard href="/guides/ccs/openworkspace/" title="Workspace Setup" icon="folder">
     How to download, extract, and open your lab workspace in CCS.  
     <Badge text="First Use" variant="note" />
   </LinkCard>
 
-  <LinkCard href="/guides/labkit" title="Lab Kit Overview" icon="laptop">
+  <LinkCard href="/guides/labkit/" title="Lab Kit Overview" icon="laptop">
     Details about the TI EK-TM4C1294XL LaunchPad and BOOSTXL-EDUMKII BoosterPack.  
     <Badge text="Hardware" variant="default" />
   </LinkCard>
 
-  <LinkCard href="/guides/external_libraries" title="External Libraries" icon="library">
+  <LinkCard href="/guides/ccs/external_libraries/" title="External Libraries" icon="library">
     How to use and organize the provided libraries for peripherals and timing.  
     <Badge text="Recommended" variant="caution" />
   </LinkCard>
 
-  <LinkCard href="/guides/programmingstyle" title="Programming Style" icon="code">
+  <LinkCard href="/guides/programmingstyle/" title="Programming Style" icon="code">
     Guidelines for mixing C and C++ in your lab projects.  
     <Badge text="Best Practices" variant="success" />
   </LinkCard>
@@ -63,12 +63,12 @@ import {
 
 <Steps>
     <ol>
-        <li><LinkButton href="/guides/installccs" target="_blank">Install CCS & TivaWare</LinkButton></li>
-        <li><LinkButton href="/guides/enviromentsetup" target="_blank">Configure CCS Environment</LinkButton></li>
-        <li><LinkButton href="/guides/openworkspace" target="_blank">Workspace Setup</LinkButton></li>
-        <li><LinkButton href="/guides/labkit" target="_blank">Lab Kit Overview</LinkButton></li>
-        <li><LinkButton href="/guides/external_libraries" target="_blank">External Libraries</LinkButton></li>
-        <li><LinkButton href="/guides/programmingstyle" target="_blank">Programming Style</LinkButton></li>
+        <li><LinkButton href="/guides/ccs/installccs/" target="_blank">Install CCS & TivaWare</LinkButton></li>
+        <li><LinkButton href="/guides/ccs/enviromentsetup/" target="_blank">Configure CCS Environment</LinkButton></li>
+        <li><LinkButton href="/guides/ccs/openworkspace/" target="_blank">Workspace Setup</LinkButton></li>
+        <li><LinkButton href="/guides/labkit/" target="_blank">Lab Kit Overview</LinkButton></li>
+        <li><LinkButton href="/guides/ccs/external_libraries/" target="_blank">External Libraries</LinkButton></li>
+        <li><LinkButton href="/guides/programmingstyle/" target="_blank">Programming Style</LinkButton></li>
     </ol>
 </Steps>
 
