--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -12,7 +12,7 @@ hero:
       icon: right-arrow
       variant: primary
     - text: Setup Guide
-      link: /guides/setupguide/
+      link: /guides/ccs/setupguide/
       icon: setting
       variant: secondary
 giscus: true
