--- a/src/content/docs/labs/lab0.mdx
+++ b/src/content/docs/labs/lab0.mdx
@@ -2,7 +2,7 @@
 title: "Lab 0: Tutorial, Button Handling, Stopwatch"
 description: Introductory tutorial to embedded system platform and development environment
 links:
-- /guides/setupguide/
+- /guides/ccs/setupguide/
 - /guides/labtimeline/
 ---
 
@@ -18,7 +18,7 @@ import { FileTree } from '@astrojs/starlight/components';
    <LinkCard
       title="Complete Setup Guide First"
       description="Before starting Lab 0, make sure you have completed the environment setup."
-      href="/guides/setupguide/"
+      href="/guides/ccs/setupguide/"
       icon="setting"
    />
    <LinkCard
