--- a/src/content/docs/labs/lab1.mdx
+++ b/src/content/docs/labs/lab1.mdx
@@ -4,7 +4,7 @@ description: "Learn how to add sound feedback, navigate between screens, and org
 links:
 - /labs/lab0/
 - /guides/labtimeline/
-- /guides/setupguide/
+- /guides/ccs/setupguide/
 - /reference/tivaware/pwmsignals/
 - /reference/libraries/otp3001/
 - /reference/tivaware/mic_adc/
@@ -34,7 +34,7 @@ import { Card, CardGrid, LinkCard } from '@astrojs/starlight/components';
    <LinkCard
       title="Workspace Setup"
       description="If you’re using a lab computer, you must reconfigure Code Composer Studio each session."
-      href="/guides/setupguide/"
+      href="/guides/ccs/setupguide/"
       icon="cpu"
    />
    <LinkCard
