--- a/src/content/docs/reference/Example Projects/blinkExample.mdx
+++ b/src/content/docs/reference/Example Projects/blinkExample.mdx
@@ -2,7 +2,7 @@
 title: "Buttons Callback Example"
 description: "Guide explaining how the button callbacks example works: registering callbacks, configuring timing, and integrating the tick loop."
 links:
-- /guides/openworkspace/
+- /guides/ccs/openworkspace/
 
 ---
 import { Badge, Icon, CardGrid, Card, LinkCard } from '@astrojs/starlight/components';
@@ -23,7 +23,7 @@ import { Badge, Icon, CardGrid, Card, LinkCard } from '@astrojs/starlight/compon
 <LinkCard
     title="How to Open the Workspace in CCS"
     description="Instructions to set up and open the project in Code Composer Studio."
-    href="/guides/openworkspace/"
+    href="/guides/ccs/openworkspace/"
     icon="right-arrow"
     target="_blank"
     rel="noopener noreferrer"
