--- a/src/content/docs/reference/Example Projects/buzzerExample.mdx
+++ b/src/content/docs/reference/Example Projects/buzzerExample.mdx
@@ -2,7 +2,7 @@
 title: "Button with audio feedback"
 description: "Example code for generating tones with PWM on the TM4C1294XL LaunchPad when pressing and releasing buttons."
 links:
-- /guides/openworkspace/
+- /guides/ccs/openworkspace/
 ---
 import { Badge, Icon, CardGrid, Card, LinkCard } from '@astrojs/starlight/components';
 
@@ -20,7 +20,7 @@ import { Badge, Icon, CardGrid, Card, LinkCard } from '@astrojs/starlight/compon
 <LinkCard
       title="Workspace setup for CCS"
   description="Instructions to set up the CCS workspace for running the example project."
-      href="/guides/openworkspace/"
+      href="/guides/ccs/openworkspace/"
   icon="right-arrow"
   target="_blank"
   rel="noopener noreferrer"
