--- a/src/content/docs/labs/lab2.mdx
+++ b/src/content/docs/labs/lab2.mdx
@@ -3,7 +3,7 @@ title: "Lab 2 — FreeRTOS Basics"
 description: "Learn the basics of FreeRTOS by creating simple multitasking applications on the TM4C1294XL LaunchPad."
 links:
   - "/labs/lab1/"
-  - "/guides/setupguide/"
+  - "/guides/ccs/setupguide/"
   - "/guides/labtimeline/"
   - "/guides/freertos/"
 ---
@@ -32,7 +32,7 @@ import { Card, CardGrid, LinkCard } from '@astrojs/starlight/components';
    <LinkCard
       title="FreeRTOS Guide"
       description="Learn the basics of FreeRTOS in our comprehensive guide."
-      href="/guides/freertos/"
+      href="/guides/FreeRTOS/freertos/"
       icon="cpu"
    />
    <LinkCard
